# Dasharr

./: CONTRIBUTING.md  Dockerfile  README.md  compose.yml
backend/: .env.ci  .env.example  .gitignore  Cargo.toml
backend/.sqlx/: query-17074306ff7c1c955413de711e9078b182fda2b49b6856be69b7bdf7e8373dfe.json  query-21c23083645a385f6488a7cb1f8bfb210888eeb1c08c0538475067da933fdd0b.json  query-3546055afa38128492c2bf340f2eb2491805c1f218be659df9d9b52bc32eeece.json  query-39955c92190b12ef25e7142f0fd9b055f28e7a4f32158a1b5ed4cbd8f0cfc4d2.json  query-3d0eace9ae2d645af87388f8eda69abfa9070b5177dd8497e1142f6206be4909.json  query-520260783dc8cd21ad4e092a1c1f8c0747ac258e5bb5b0ddf920b0a6b1921cc1.json  query-592f642edd7fbfe0c75e37af4f0172f2aaceaaf4c32f9606a496b93e0066d469.json  query-613d1a6231ca427af8a9b341c2b593c1034d6c3363210e82208e84ca9c4ff27c.json  query-7c229e31f3f9184bd6f0a0d99f86060eb9912d4f1c2020e5e87813d2e8f9a2db.json  query-7eba82ca6461bd067904b680fc81bfd14abd9d67e151b04180890d872364db73.json  query-856f4f3772e4544347a028bc91190cd41876b2809c13c9ade4e0bbffc6471c80.json  query-8e942faaa4ddea3acbc87591b97efeab3cdd7eb42bdeb6ed2fbadf10719b97bd.json  query-907d1590d31348f1f7d20d8279a3caa59e9fe017390dde08057e1c7ba8c9ceee.json  query-a48d043cb8800aaeabe60fe62dbc84151f5c64a123dcf8d94bce4bbb0e03cf6b.json  query-b538c91e01f36d4e088d6eb6a0615a532faecb993f8ab1f44d0daba090e45915.json  query-bf1375d3033b9d4486b7c8231ffedd84c906d0264ca2ca7746dc32b637d0b930.json  query-c182285e2b4040418df783ae6f91fc678c90788ff868b85724268e7d9d4b156e.json  (+2 more)
backend/migrations/: 00000000_initdb.sql  (+24 more)
(+102 files in other folders)
